Fix: if the time interval hasn’t ended, use most recent data